--- a/reports-app/pom.xml
+++ b/reports-app/pom.xml
@@ -50,6 +50,14 @@
     </repositories>
 
     <dependencies>
+        <!-- for tests -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>6.0.28</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -359,7 +367,7 @@
                         <solr.solr.home>${solr.solr.home}</solr.solr.home>
                     </systemProperties>
                     <server>maven-tomcat6</server>
-<!--                    <webapps> 
+                    <!--                    <webapps> 
                         <webapp> 
                             <groupId>reports</groupId> 
                             <artifactId>reports-solr</artifactId> 
